LDEV-4054 updating English, Greek and Spanish

--- a/lams_tool_gmap/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_gmap/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = gmap
 #language code: el 
 #locale code: GR 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 19:05:30 CST 2016 
  
 #=================== labels for Google Maps =================# 
 
@@ -14,7 +14,6 @@ activity.helptext  =\u03a7\u03ac\u03c1\u03c4\u03b7\u03c2 Google \u03b3\u03b9\u03
 pageTitle.authoring  =\u0394\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03af\u03b1 \u03a7\u03ac\u03c1\u03c4\u03b7 Google
 button.basic  =\u0392\u03b1\u03c3\u03b9\u03ba\u03ac
 button.advanced  =\u03a0\u03c1\u03bf\u03c7\u03c9\u03c1\u03b7\u03bc\u03ad\u03bd\u03b1
-button.upload  =\u0391\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae
 label.authoring.basic.title  =\u03a4\u03af\u03c4\u03bb\u03bf\u03c2:
 label.authoring.basic.content  =\u03a0\u03b5\u03c1\u03b9\u03b5\u03c7\u03cc\u03bc\u03b5\u03bd\u03b1
 label.authoring.basic.instructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2
@@ -48,37 +47,21 @@ monitor.summary.title.advanced  =\u03a0\u03c1\u03bf\u03c7\u03c9\u03c1\u03b7\u03b
 monitor.summary.title.groups  =\u039f\u03bc\u03ac\u03b4\u03b5\u03c2
 monitor.summary.title.map  =\u03a7\u03ac\u03c1\u03c4\u03b7\u03c2
 monitor.summary.th.advancedSettings  =\u03a0\u03c1\u03bf\u03c7\u03c9\u03c1\u03b7\u03bc\u03ad\u03bd\u03b5\u03c2 \u03a1\u03c5\u03b8\u03bc\u03af\u03c3\u03b5\u03b9\u03c2
-instructions.onlineInstructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2 \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7 \u03bc\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-instructions.offlineInstructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2 \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7  \u03c7\u03c9\u03c1\u03af\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-instructions.uploadOnlineInstr  =\u0391\u03c1\u03c7\u03b5\u03af\u03bf \u039f\u03b4\u03b7\u03b3\u03b9\u03ce\u03bd \u03b3\u03b9\u03b1 \u03c3\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-instructions.uploadOfflineInstr  =\u0391\u03c1\u03c7\u03b5\u03af\u03bf \u039f\u03b4\u03b7\u03b3\u03b9\u03ce\u03bd \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7  \u03c7\u03c9\u03c1\u03af\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-instructions.type.online  =\u03a3\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
-instructions.type.offline  =\u03a7\u03c9\u03c1\u03af\u03c2 \u0391\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03a3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
-label.filename  =\u038c\u03bd\u03bf\u03bc\u03b1 \u0391\u03c1\u03c7\u03b5\u03af\u03bf\u03c5
-label.type  =\u03a4\u03cd\u03c0\u03bf\u03c2
-label.attachments  =\u0395\u03c0\u03b9\u03c3\u03c5\u03bd\u03b1\u03c0\u03c4\u03cc\u03bc\u03b5\u03bd\u03b1
 label.authoring.authoredMarkers  =\u03a3\u03b7\u03bc\u03ac\u03bd\u03c3\u03b5\u03b9\u03c2
 label.legend.unsaved  =\u03a7\u03c9\u03c1\u03af\u03c2 \u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7
 label.legend.saved  =\u0391\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03c5\u03bc\u03ad\u03bd\u03bf
 label.legend.edited  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03bc\u03ad\u03bd\u03bf
 label.legend.userSelected  =\u0395\u03c0\u03b9\u03bb\u03b5\u03b3\u03bc\u03ad\u03bd\u03bf\u03b9 \u03b1\u03c0\u03cc \u03c4\u03bf \u03a7\u03c1\u03ae\u03c3\u03c4\u03b7
 link.view  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae
-link.download  =\u039b\u03ae\u03c8\u03b7
-link.delete  =\u0394\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae
-message.unsavedChanges  =\u03a3\u03b5\u03bb\u03af\u03b4\u03b1 \u03c0\u03bf\u03c5 \u03c0\u03b5\u03c1\u03b9\u03ad\u03c7\u03b5\u03b9 \u03bc\u03b7 \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03c5\u03bc\u03ad\u03bd\u03b5\u03c2 \u03b1\u03bb\u03bb\u03b1\u03b3\u03ad\u03c2
 message.defineLaterSet  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03c0\u03b5\u03c1\u03b9\u03bc\u03ad\u03bd\u03b5 \u03c4\u03bf\u03bd \u03ba\u03b1\u03b8\u03b7\u03b3\u03b7\u03c4\u03ae-\u03c3\u03cd\u03bc\u03b2\u03bf\u03c5\u03bb\u03bf \u03bd\u03b1 \u03c3\u03c5\u03bc\u03c0\u03bb\u03b7\u03c1\u03ce\u03c3\u03b9\u03b5 \u03c4\u03bf \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03cc\u03bc\u03b5\u03bd\u03bf \u03b1\u03c5\u03c4\u03ae\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
-message.runOfflineSet  =\u0391\u03c5\u03c4\u03ae \u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03b4\u03b5\u03bd \u03b3\u03af\u03bd\u03b5\u03c4\u03b1\u03b9 \u03c3\u03c4\u03bf\u03bd \u03c5\u03c0\u03bf\u03bb\u03bf\u03b3\u03b9\u03c3\u03c4\u03ae. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03b4\u03b5\u03af\u03c4\u03b5 \u03c4\u03bf\u03bd \u03b5\u03c0\u03bf\u03c0\u03c4\u03b7 \u03c3\u03b1\u03c2 \u03b3\u03b9\u03b1 \u03bb\u03b5\u03c0\u03c4\u03bf\u03bc\u03ad\u03c1\u03b5\u03b9\u03b5\u03c2.
 pageTitle.monitoring  =\u0395\u03c0\u03bf\u03c0\u03c4\u03b5\u03af\u03b1 \u03a7\u03ac\u03c1\u03c4\u03b7 Google
 button.summary  =\u0391\u03bd\u03b1\u03ba\u03b1\u03b9\u03c6\u03b1\u03bb\u03b1\u03af\u03c9\u03c3\u03b7
-button.instructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2
 button.editActivity  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 button.statistics  =\u03a3\u03c4\u03b1\u03c4\u03b9\u03c3\u03c4\u03b9\u03ba\u03ac
 titleHeading.summary  =\u0391\u03bd\u03b1\u03ba\u03b5\u03c6\u03b1\u03bb\u03b1\u03af\u03c9\u03c3\u03b7
 titleHeading.instructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2
 titleHeading.statistics  =\u03a3\u03c4\u03b1\u03c4\u03b9\u03c3\u03c4\u03b9\u03ba\u03ac
 titleHeading.editActivity  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
-titleHeading.exportPortfolio  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03a6\u03b1\u03ba\u03ad\u03bb\u03bf\u03c5 \u0395\u03c1\u03b3\u03b1\u03c3\u03b9\u03ce\u03bd
-heading.group  =\u039f\u03bc\u03ac\u03b4\u03b1 {0}:
 heading.totalLearners  =\u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u0395\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03bf\u03bc\u03ad\u03bd\u03c9\u03bd
 heading.table.group  =\u039f\u03bc\u03ac\u03b4\u03b1
 heading.totalLearnersInGroup  =\u03a3\u03c5\u03bd\u03bf\u03bb\u03b9\u03ba\u03cc\u03c2 \u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u0395\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03bf\u03bc\u03ad\u03bd\u03c9\u03bd \u03c3\u03c4\u03b7\u03bd \u039f\u03bc\u03ac\u03b4\u03b1:
@@ -120,6 +103,8 @@ advanced.reflectOnActivity  =\u03a0\u03c1\u03bf\u03c3\u03b8\u03ae\u03ba\u03b7 \u
 button.continue  =\u03a3\u03c5\u03bd\u03ad\u03c7\u03b5\u03b9\u03b1
 button.placeMarker  =\u03a4\u03cc\u03c0\u03bf\u03c2 \u03c3\u03ae\u03bc\u03b1\u03bd\u03c3\u03b7\u03c2
 label.nogroups  =\u0394\u03b5\u03bd \u03b2\u03c1\u03ad\u03b8\u03b7\u03ba\u03b1\u03bd \u03bf\u03bc\u03ac\u03b4\u03b5\u03c2 \u03b3\u03b9\u03b1 \u03b1\u03c5\u03c4\u03ae \u03c4\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1.
+button.submit  =\u039f\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03b7
+label.activity.completion  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 
 
-#======= End labels: Exported 114 labels for el GR =====
+#======= End labels: Exported 99 labels for el GR =====
