--- a/lams_tool_gmap/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_gmap/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = gmap
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 19:05:29 CST 2016 
  
 #=================== labels for Google Maps =================# 
 
@@ -23,16 +23,16 @@ label.authoring.basic.centerMap  =Center map on location:
 label.authoring.basic.confirmDelete  =Are you sure you want to remove this marker?
 error.missingMarkerTitle  =Title is required for marker.
 error.cantFindAddress  =Unable to find location:
-button.addMarker  =Add Marker
+button.addMarker  =Add marker
 button.fitMarkers  =Fit All Markers in Map
 button.go  =Go!
-label.createdBy  =Created By:
+label.createdBy  =Created by:
 label.latitudeLongitude  =Latitude-Longitude:
-label.newInfoWindowText  =New Info Window Text:
+label.newInfoWindowText  =Description:
 button.edit  =Edit
 button.remove  =Remove
 label.learner.markerLimitReached  =You have reached the marker limit, you cannot add any more.
-advanced.editingOptions  =Editing Options
+advanced.editingOptions  =Editing options
 advanced.lockOnFinished  =Lock when finished
 advanced.allowEditMarkers  =Allow learners to edit their own saved markers
 advanced.allowShowAllMarkers  =Allow learners to see markers from other learners
@@ -47,33 +47,27 @@ monitor.summary.title.advanced  =Advanced
 monitor.summary.title.groups  =Groups
 monitor.summary.title.map  =Map
 monitor.summary.th.advancedSettings  =Advanced settings
-instructions.type.online  =Online
-instructions.type.offline  =Offline
-label.filename  =Filename
-label.type  =Type
 label.authoring.authoredMarkers  =Markers
 label.legend.unsaved  =Unsaved:
 label.legend.saved  =Saved:
 label.legend.edited  =Edited:
-label.legend.userSelected  =User Selected:
+label.legend.userSelected  =User selected:
 link.view  =View
 message.defineLaterSet  =Please wait for the instructor to complete the contents of this activity
 pageTitle.monitoring  =Gmap Monitoring
 button.summary  =Summary
-button.editActivity  =Edit Activity
+button.editActivity  =Edit activity
 button.statistics  =Statistics
 titleHeading.summary  =Summary
 titleHeading.instructions  =Instructions
 titleHeading.statistics  =Statistics
-titleHeading.editActivity  =Edit Activity
-titleHeading.exportPortfolio  =Export Portfolio
-heading.group  =Group {0}:
-heading.totalLearners  =Number of Learners
+titleHeading.editActivity  =Edit activity
+heading.totalLearners  =Number of learners
 heading.table.group  =Group
-heading.totalLearnersInGroup  =Total Number of Learners in Group:
-heading.totalFinishedLearnersInGroup  =Number of Finished Learners:
+heading.totalLearnersInGroup  =Learners in group:
+heading.totalFinishedLearnersInGroup  =Finished learners:
 label.view  =View
-label.notAvailable  =Not Available
+label.notAvailable  =Not available
 heading.learner  =Learner
 button.cancel  =Cancel
 button.ok  =OK
@@ -85,7 +79,7 @@ label.cancel  =Cancel
 label.created  =Created
 label.lastModified  =Last modified
 authoring.msg.cancel.save  =Do you want to close this window without saving?
-button.try.again  =Try Again
+button.try.again  =Try again
 button.finish  =Next Activity
 message.alertContentEdit  =Warning: One of more learners have accessed this activity. Changing this content will result in learners getting different information.
 error.cantLoadMap  =Could not load map.
@@ -96,11 +90,11 @@ label.unsavedMarkers  =You have one or more markers on the map without a title, 
 button.refresh  =Refresh Map
 button.Continue  =Continue
 heading.reflection  =Reflection
-pageTitle.monitoring.notebook  =View Reflection
+pageTitle.monitoring.notebook  =View reflection
 message.no.reflection.available  =No notebook available
 monitor.summary.td.addNotebook  =Add a notebook at end of Gmap
 monitor.summary.td.notebookInstructions  =Notebook instructions
-pageTitle.admin  =Gmap Settings
+pageTitle.admin  =Gmap settings
 admin.formError  =Missing values, please make sure all required fields are entered.
 admin.gmapKey  =Google Maps API Key
 admin.success  =Configuration successfully saved.
@@ -110,6 +104,7 @@ button.continue  =Continue
 button.placeMarker  =Place marker
 label.nogroups  =No groups found for activity.
 button.submit  =Finish
+label.activity.completion  =End of activity
 
 
-#======= End labels: Exported 104 labels for en AU =====
+#======= End labels: Exported 99 labels for en AU =====
