--- a/lams_tool_gmap/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_gmap/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = gmap
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 19:05:31 CST 2016 
  
 #=================== labels for Google Maps =================# 
 
@@ -14,7 +14,6 @@ activity.helptext  =Permite usar Mapas de Google para marcar puntos geogr\u00e1f
 pageTitle.authoring  =Mapas Autoria
 button.basic  =B\u00e1sico
 button.advanced  =Avanzado
-button.upload  =Subir
 label.authoring.basic.title  =T\u00edtulo
 label.authoring.basic.content  =Contenido
 label.authoring.basic.instructions  =Instrucciones:
@@ -48,37 +47,21 @@ monitor.summary.title.advanced  =Avanzado
 monitor.summary.title.groups  =Grupos
 monitor.summary.title.map  =Mapa
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
-instructions.onlineInstructions  =Instrucciones para modo online:
-instructions.offlineInstructions  =Instrucciones para modo offline:
-instructions.uploadOnlineInstr  =Archivos para modo online:
-instructions.uploadOfflineInstr  =Archivos para modo offline:
-instructions.type.online  =Online
-instructions.type.offline  =Offline
-label.filename  =Nombre de archivo
-label.type  =Tipo
-label.attachments  =Archivos adjuntos
 label.authoring.authoredMarkers  =Puntos
 label.legend.unsaved  =Sin salvar:
 label.legend.saved  =Guardado:
 label.legend.edited  =Editado:
 label.legend.userSelected  =Seleccionado:
 link.view  =Ver
-link.download  =Descargar
-link.delete  =Borrar
-message.unsavedChanges  =Esta p\u00e1gina tiene datos sin salvar.
 message.defineLaterSet  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
-message.runOfflineSet  =Esta actividad ha sido se\u00f1alada para realizarse en forma offline. Por favor, consulte con su profesor.
 pageTitle.monitoring  =Mapas Seguimiento
 button.summary  =Resumen
-button.instructions  =Instrucciones
 button.editActivity  =Editar Actividad
 button.statistics  =Estad\u00edsticas
 titleHeading.summary  =Resumen
 titleHeading.instructions  =Instrucciones
 titleHeading.statistics  =Estadisticas
 titleHeading.editActivity  =Editar Actividad
-titleHeading.exportPortfolio  =Exportar portfolio
-heading.group  =Grupo {0}:
 heading.totalLearners  =N\u00famero de estudiantes:
 heading.table.group  =Grupo
 heading.totalLearnersInGroup  =N\u00famero total de estudiantes en el grupo:
@@ -121,6 +104,7 @@ button.continue  =Continuar
 button.placeMarker  =Fijar posici\u00f3n
 label.nogroups  =No hay grupos en esta actividad.
 button.submit  =Finalizar
+label.activity.completion  =Al finalizar actividad
 
 
-#======= End labels: Exported 115 labels for es ES =====
+#======= End labels: Exported 99 labels for es ES =====
