LDEV-4054 updating English, Greek and Spanish

--- a/lams_tool_spreadsheet/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_spreadsheet/conf/language/lams/ApplicationResources.properties
@@ -2,17 +2,15 @@ appName = spreadsheet
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 19:20:58 CST 2016 
  
 #=================== labels for Online Spreadsheet =================# 
 
 appName  =Spreadsheet
-activity.description  =Spreadsheet.
-activity.helptext  =Spreadsheet Tool.
-tool.display.name  =Spreadsheet Tool
+activity.description  =Spreadsheet
+activity.helptext  =Spreadsheet tool
+tool.display.name  =Spreadsheet tool
 tool.description  =Tool for displaying spreadsheets.
-errorPage.title  =Error page
-errorPage.heading  =Some error occurs when handling your request
 label.authoring.heading  =Spreadsheet Authoring
 label.authoring.title  =Spreadsheet
 label.authoring.heading.basic  =Basic
@@ -20,7 +18,7 @@ label.authoring.heading.basic.desc  =Basic input information for spreadsheet
 label.authoring.heading.advance.desc  =Please input advance options for spreadsheet
 label.authoring.basic.resource.instructions  =Instructions
 label.authoring.basic.instruction  =Instruction
-label.authoring.basic.resource.add.instruction  =Add Instruction
+label.authoring.basic.resource.add.instruction  =Add instruction
 label.authoring.basic.title  =Title
 label.authoring.basic.spreadsheet  =Spreadsheet
 label.authoring.advanced.reflectOnActivity  =Add a notebook at end of Spreadsheet with the following instructions:
@@ -31,32 +29,32 @@ label.authoring.cancel.button  =Cancel
 label.learning.title  =Spreadsheet Learning
 label.learning.comments  =Comments
 label.learning.marks  =Marks
-label.learning.not.available  =Not Available
+label.learning.not.available  =Not available
 label.monitoring.summary.advanced.settings  =Advanced settings
 label.monitoring.summary.learner  =Learner
 label.monitoring.summary.marked  =Marked?
 label.monitoring.summary.lock.when.finished  =Lock when finished
 label.monitoring.summary.individual.spreadsheets  =Learners are allowed to submit individual spreadsheets
 label.monitoring.summary.marking.enabled  =Spreadsheet marking is enabled
-label.monitoring.summary.notebook.reflection  =Notebook Reflection
-label.monitoring.summary.overall.summary  =Overall Summary
-label.monitoring.summary.title.reflection  =Notebook Entry
-label.monitoring.summary.reflection  =Notebook Entry
+label.monitoring.summary.notebook.reflection  =Notebook reflection
+label.monitoring.summary.overall.summary  =Summary
+label.monitoring.summary.title.reflection  =Notebook entry
+label.monitoring.summary.reflection  =Notebook entry
 label.monitoring.summary.mark.button  =Mark
 label.monitoring.summary.user  =Learner
-label.monitoring.summary.viewAllMarks.button  =View All Marks
-label.monitoring.summary.releaseMarks.button  =Release Marks
-label.monitoring.summary.downloadMarks.button  =Download Marks
+label.monitoring.summary.viewAllMarks.button  =View all marks
+label.monitoring.summary.releaseMarks.button  =Release marks
+label.monitoring.summary.downloadMarks.button  =Download marks
 label.monitoring.summary.marking.marking  =Marking
 label.monitoring.summary.marking.marks  =Marks
 label.monitoring.summary.marking.comments  =Comments
-label.monitoring.summary.marking.update.marks  =Update Marks
+label.monitoring.summary.marking.update.marks  =Update marks
 label.monitoring.edit.activity.edit  =Edit
 label.monitoring.statistics.session.name  =Session name
 label.monitoring.statistics.marked  =Marked spreadsheets
 label.monitoring.statistics.not.marked  =Not marked spreadsheets
 label.monitoring.statistics.total.spreadsheets.sent.by.learners  =Total spreadsheets sent by learners
-label.monitoring.downloadmarks.learner.name  =Learner name
+label.monitoring.downloadmarks.learner.name  =Name
 label.monitoring.downloadmarks.marks  =Marks
 label.monitoring.downloadmarks.comments  =Comments
 label.monitoring.vieawallmarks.heading.marking  =Marking
@@ -66,20 +64,16 @@ label.monitoring.vieawallmarks.true  =True
 label.monitoring.vieawallmarks.false  =False
 label.monitoring.vieawallmarks.marks  =Marks:
 label.monitoring.vieawallmarks.comments  =Comments:
-label.monitoring.vieawallmarks.update.marks  =Update Marks
+label.monitoring.vieawallmarks.update.marks  =Update marks
 label.reviewitem.spreadsheet.sent.by  =Spreadsheet sent by
 label.reviewitem.user.hasnot.sent.spreadsheet  =User hasn't sent spreadsheet yet.
-label.reviewitem.title  =Review User's Spreadsheet
+label.reviewitem.title  =Review learners' Spreadsheet
 label.export.marking.enabled  =Spreadsheet marking is enabled
-label.export.notebook.reflection.enabled  =Notebook Reflection is enabled
+label.export.notebook.reflection.enabled  =Notebook reflection is enabled
 error.summary.marks.blank  =Marks can not be blank.
 error.summary.marks.invalid.number  =Mark is in invalid number format.
 error.summary.comments.blank  =Comments can not be blank.
 error.upload.failed  =Upload file failed: {0}
-error.msg.upload.file.not.found  =Could not find upload file {0}.
-error.msg.file.not.found  =File not found exception occurs when uploading file.
-error.msg.io.exception  =IOException occurs when uploading file.
-error.msg.invaid.param.upload  =InvalidParameterException occured while trying to upload File.
 error.msg.default.content.not.find  =Could not retrieve default content record for this tool.
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 monitoring.tab.summary  =Summary
@@ -87,24 +81,24 @@ monitoring.tab.statistics  =Statistics
 monitoring.tab.edit.activity  =Edit Activity
 monitoring.label.group  =Group
 monitoring.summary.note  =Note: number of learners is the number of learners who have viewed the spreadsheet.
-message.monitoring.edit.activity.not.editable  =This Activity is no longer editable
+message.monitoring.edit.activity.not.editable  =This activity is no longer editable
 label.delete  =Delete
 label.view  =View
 label.edit  =Edit
-message.monitoring.summary.no.session  =No Session Available
+message.monitoring.summary.no.session  =No session available
 label.save  =Save
 label.cancel  =Cancel
 define.later.message  =Please wait for the instructor to complete the contents of this activity.
 button.try.again  =Try again
-page.title.monitoring.view.reflection  =View Notebook Entries
+page.title.monitoring.view.reflection  =Notebook entries
 message.no.reflection.available  =No notebook available
-title.reflection  =Notebook Entry
+title.reflection  =Notebook entry
 activity.title  =Spreadsheet
 label.authoring.save.button  =Save
 label.authoring.advance.lock.on.finished  =Lock when finished
 label.authoring.heading.advance  =Advanced
-label.up  =Move Up
-label.down  =Move down
+label.up  =Up
+label.down  =Down
 label.continue  =Continue
 button.close  =Close
 label.finished  =Next Activity
@@ -113,13 +107,15 @@ error.msg.repository  =A repository error occurred while trying to upload the fi
 message.alertContentEdit  =Warning: One of more learners have accessed this activity. Changing this content will result in learners getting different information.
 message.activityLocked  =The instructor has set this activity not to allow you to change spreadsheet after you have finished it.
 msg.mark.released  =Marks in {0} have been released.
-label.export.reflection  =Notebook Entries
+label.export.reflection  =Notebook entries
 message.warnLockOnFinish  =Note: After you click on "Next Activity", if you come back to this Spreadsheet, you won\u2019t be able to submit apreadsheet's changes.
 label.on  =On
 label.off  =Off
 label.submit  =Finish
 label.search  =Search...
-label.refresh = Refresh
-label.spreadsheet.options=Spreadsheet Options
-label.activity.completion=End of Activity
-#======= End labels: Exported 114 labels for en AU =====
+label.refresh  =Refresh
+label.spreadsheet.options  =Options
+label.activity.completion  =End of activity
+
+
+#======= End labels: Exported 110 labels for en AU =====
