--- a/lams_tool_spreadsheet/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_spreadsheet/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = spreadsheet
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 19:20:56 CST 2016 
  
 #=================== labels for Online Spreadsheet =================# 
 
@@ -11,8 +11,6 @@ activity.description  =Hoja de C\u00e1lculo
 activity.helptext  =Hoja de C\u00e1lculo
 tool.display.name  =Hoja de C\u00e1lculo
 tool.description  =Herramienta que permite usar una hoja de c\u00e1lculo en linea.
-errorPage.title  =Error en p\u00e1gina
-errorPage.heading  =Se ha producido un error al procesar su opci\u00f3n
 label.authoring.heading  =Hoja de C\u00e1lculo Edici\u00f3n
 label.authoring.title  =Hoja de C\u00e1lculo
 label.authoring.heading.basic  =B\u00e1sico
@@ -76,10 +74,6 @@ error.summary.marks.blank  =Debe poner una marca
 error.summary.marks.invalid.number  =La marca/evaluaci\u00f3n debe ser un n\u00famero valido
 error.summary.comments.blank  =No puede dejar comentarios en blanco
 error.upload.failed  =El archivo que ha intentado subir a fallado: {0}
-error.msg.upload.file.not.found  =No se ha podido encontrar el archivo subido: {0}
-error.msg.file.not.found  =Ha occurrido un error con el archivo subido.
-error.msg.io.exception  =Error al subir el archivo.
-error.msg.invaid.param.upload  =Error al subir el archivo.
 error.msg.default.content.not.find  =No se han podido encontrar el contenido de defecto de estar herramienta.
 authoring.msg.cancel.save  =\u00bfEsta seguro que desea cerrar sin guardar cambios?
 monitoring.tab.summary  =Resumen
@@ -88,7 +82,6 @@ monitoring.tab.edit.activity  =Editar Actividad
 monitoring.label.group  =Grupos
 monitoring.summary.note  =Atenci\u00f3n: el n\u00famero de estudiantes significa la cantidad de estos que han visto la hoja de c\u00e1lculo.
 message.monitoring.edit.activity.not.editable  =Esta actividad ya no se puede editar
-export.title  =Exportar portfolio
 label.delete  =Borrar
 label.view  =Ver
 label.edit  =Editar
@@ -120,6 +113,9 @@ label.on  =Si
 label.off  =No
 label.submit  =Finalizar
 label.search  =Buscar...
+label.refresh  =Actualizar
+label.spreadsheet.options  =Opciones
+label.activity.completion  =Al finalizar actividad
 
 
-#======= End labels: Exported 114 labels for es ES =====
+#======= End labels: Exported 110 labels for es ES =====
