LDEV-4054 updating English

--- a/lams_tool_wiki/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_wiki/conf/language/lams/ApplicationResources.properties
@@ -2,19 +2,17 @@ appName = wiki
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 19:31:08 CST 2016 
  
 #=================== labels for Wiki =================# 
 
 appName  =wiki
-error.contentrepository  =An error has occurred when saving/deleting instruction file {0}. The files may not be saved correctly.
 activity.helptext  =Wiki tool for creating wiki pages
 message.contentInUseSet  =Modification of content is not allowed since one or more learners has attempted the activity.
-error.content.locked  =The content has been locked since it is being used by one or more learners. The modification of the content is not allowed.
 tool.display.name  =Wiki
-tool.description  =Wiki Tool
+tool.description  =Wiki tool
 activity.title  =Wiki
-activity.description  =Wiki Tool
+activity.description  =Wiki tool
 pageTitle.authoring  =Wiki Authoring
 button.basic  =Basic
 button.advanced  =Advanced
@@ -27,39 +25,34 @@ advanced.lockOnFinished  =Lock when finished
 advanced.allowLearnerCreatePages  =Allow learners to create new Wiki pages
 advanced.allowLearnerInsertLinks  =Allow learners to insert external links into Wiki
 advanced.allowLearnerAttachImages  =Allow learners to attach images to Wiki
-advanced.notifyChange  =Send email notification to monitors when the Wiki is changed
+advanced.notifyChange  =Send email notification to monitors when wiki pages are changed/edited.
 advanced.reflectOnActivity  =Add a notebook at end of Wiki with the following instructions:
 message.no.reflection.available  =No notebook available
-advanced.editingLimits  =Editing Limits
+advanced.editingLimits  =Editing limits
 advanced.editingLimits.prompt  =Number of times a learner can edit a page
 advanced.editingLimits.minimum  =Minimum:
 advanced.editingLimits.maximum  =Maximum:
 advanced.editingLimits.nominimum  =No minimum
 advanced.editingLimits.nomaximum  =No maximum
 advanced.editingLimits.error  =Maximum edits must be larger or equal to minimum.
-instructions.type.online  =Online
-instructions.type.offline  =Offline
-label.filename  =Filename
-label.type  =Type
 message.updateSuccess  =Changes saved
 pageTitle.learning  =Wiki
 message.defineLaterSet  =Please wait for the instructor to complete the contents of this activity
 pageTitle.monitoring  =Wiki Monitoring
 button.summary  =Summary
-button.editActivity  =Edit Activity
+button.editActivity  =Edit activity
 button.statistics  =Statistics
 titleHeading.summary  =Summary
 titleHeading.statistics  =Statistics
-titleHeading.editActivity  =Edit Activity
-heading.group  =Group {0}:
-heading.totalLearners  =Number of Learners:
-heading.totalLearnersInGroup  =Total Number of Learners in Group:
-heading.totalFinishedLearnersInGroup  =Number of Finished Learners:
+titleHeading.editActivity  =Edit activity
+heading.totalLearners  =Number of learners:
+heading.totalLearnersInGroup  =Total number of learners in group:
+heading.totalFinishedLearnersInGroup  =Number of finished learners:
 message.summary  =There is no summary available for this tool.
 label.view  =View
-label.notAvailable  =Not Available
+label.notAvailable  =Not available
 heading.learner  =Learner
-heading.notebookEntry  =Notebook Entry
+heading.notebookEntry  =Notebook entry
 button.cancel  =Cancel
 button.close  =Close
 button.ok  =OK
@@ -69,18 +62,10 @@ button.next  =Next
 label.created  =Created
 label.lastModified  =Last modified
 label.notebookEntry  =Notebook entry
-error.missingParam  =Unable to continue. {0} is missing.
-error.exceedMaxFileSize  =File size exceeded
-error.exception.NbApplication  =An internal error has occurred with the Wiki Tool. If reporting this error, please report: <br/> <b>{0}</b>
-error.defineLater  =Sorry, the activity is not ready yet. Please wait for the instructor to finishing defining the activity.
-errors.maxfilesize  =The uploaded file has exceeded the maximum file size limit of {0} bytes
-error.mandatoryField  ={0} field is mandatory.
-error.mark.invalid.number  ={0} field must be a valid number. Decimal points are not allowed.
-error.mark.invalid.decimal.number  ={0} field must be a valid decimal number.
 authoring.msg.cancel.save  =Do you want to close this window without saving?
-button.try.again  =Try Again
+button.try.again  =Try again
 message.learner.blank.input  =You have not written anything. Are you sure this is correct?
-button.finish  =Next Activity
+button.finish  =Next activity
 message.alertContentEdit  =Warning: One of more learners have accessed this activity. Changing this content will result in learners getting different information.
 message.warnLockOnFinish  =Note: After you click on "Next Activity" and you come back to this Wiki, you won't be able to continue editing.
 message.activityLocked  =The instructor has set this activity not to allow editing after you have finished it. As you are returning to this Wiki, you are able to see your Wiki but not allowed to edit it.
@@ -90,7 +75,7 @@ message.maxEditsReached  =You have reached the maximum number of edits for this 
 message.pageNotEditable  =This page has been set to locked by your instructor, so you cannot edit it.
 titleHeading.instructions  =Instructions
 label.authoring.basic.instructions  =Instructions:
-label.wiki.body  =Wiki Body
+label.wiki.body  =Wiki content
 label.wiki.edit  =Edit
 label.wiki.edit.toolTip  =Edit the current Wiki page
 label.wiki.add  =Add
@@ -105,14 +90,14 @@ label.wiki.view.toolTip  =View this Wiki page
 label.wiki.remove  =Remove
 label.wiki.remove.toolTip  =Remove this Wiki page
 label.wiki.remove.confirm  =Are you sure you want to delete this Wiki page? This action cannot be undone.
-label.wiki.pages  =Wiki Pages
+label.wiki.pages  =Wiki pages
 label.wiki.savechanges  =Save changes
 label.wiki.history  =History
 label.wiki.history.toolTip  =View previous versions of this Wiki page
 label.wiki.history.version  =Version
 label.wiki.history.empty  =There are no previous versions of this Wiki page.
-label.wiki.history.date  =Edit Date
-label.wiki.history.editor  =Edit By
+label.wiki.history.date  =Edit date
+label.wiki.history.editor  =Edit by
 label.wiki.history.editor.author  =Author
 label.wiki.history.actions  =Actions
 label.wiki.history.actions.revert  =Revert
@@ -127,21 +112,12 @@ label.wiki.compare.removed.line  =Removed lines
 label.on  =On
 label.off  =Off
 monitor.summary.th.advancedSettings  =Advanced settings
-monitor.th.sessions  =Wiki Sessions
-monitor.th.numlearners  =Number of Learners
+monitor.th.sessions  =Wiki sessions
+monitor.th.numlearners  =Number of learners
 monitor.summary.td.addNotebook  =Add a notebook at end of Wiki
 monitor.summary.td.notebookInstructions  =Notebook instructions
-monitor.summary.date.restriction  =Deadline
-monitor.summary.when.date.restriction.is.set  =Learners will not be able to use the Wiki after the set date and time.
-monitor.summary.after.date  =Date/time:
-monitor.summary.set.restriction  =Set restriction
-monitor.summary.unset.restriction  =Remove restriction
-authoring.info.teacher.set.restriction  =For this activity, the instructor fixed a deadline until {0}. After this time this activity will not be available.
-monitor.summary.notification  =Notification
-monitor.summary.date.restriction.set  =Deadline has been set
-monitor.summary.date.restriction.removed  =Deadline has been removed
 monitor.nosessions  =There are no sessions running yet for this Wiki.
-monitor.notebooks  =Notebook Reflections
+monitor.notebooks  =Notebook reflections
 output.learner.number.of.edits  =Number of page edits
 output.learner.number.of.add  =Number of pages added
 notify.pageEdited.subject  =LAMS Wiki page has been edited by {0}.
@@ -162,8 +138,18 @@ label.wiki.remove.mark.confirm  =Are you sure you want to mark this Wiki page as
 label.wiki.removed  =This page has been removed.
 button.submit  =Finish
 error.title.invalid.characters  =Title cannot contain any of these characters ^, <, >, #, (, ), \, |, ', ", {, }, `
-label.wiki.options=Wiki Options
-label.activity.completion=End of Activity
-label.notifications=Notifications
+label.wiki.options  =Options
+label.activity.completion  =End of activity
+label.notifications  =Notifications
+monitor.summary.date.restriction  =Deadline
+monitor.summary.when.date.restriction.is.set  =Learners will not be able to use the Wiki after the set date and time.
+monitor.summary.after.date  =Date/time:
+monitor.summary.set.restriction  =Set restriction
+monitor.summary.unset.restriction  =Remove restriction
+authoring.info.teacher.set.restriction  =For this activity, the instructor fixed a deadline until {0}. After this time this activity will not be available.
+monitor.summary.notification  =Notification
+monitor.summary.date.restriction.set  =Deadline has been set
+monitor.summary.date.restriction.removed  =Deadline has been removed
 
-#======= End labels: Exported 148 labels for en AU =====
+
+#======= End labels: Exported 144 labels for en AU =====
